# prime-rl

./: .gitignore  .tmuxinator.yaml  Dockerfile  Dockerfile.cuda  README.md  deptry.json  install.sh  local_launcher.sh  pyproject.toml  save_ckpt_demo.py  test_env_integration.py  tmux.sh
.github/workflows/: cpu_tests.yaml  gpu.yml  gpu_tests.yaml  publish-environments.yml  release.yaml  tests.yaml
configs/: endpoints.py
configs/debug/: sft.toml
configs/inference/: 4b_qwen.toml  7b_experiment_math.toml  codeforces.toml  debug.toml  formatask.toml  gsm8k.toml  hendrycks_math.toml  intellect2_qwq.toml  intellect_math.toml  intellect_math_1b.toml  math_only_1b.toml  math_only_32b_2k.toml  math_only_7b.toml  math_only_7b_skywork.toml  math_only_7b_skywork_8k.toml  reverse_text.toml  simple_ascii_tree.toml  simple_math.toml  simple_math_32b.toml  simple_math_7b.toml  simple_unscramble.toml  skywork_7b.toml  vf_test.toml
configs/orchestrator/: gsm8k.toml  hendrycks_math.toml  intellect_math.toml  reverse_text.toml
configs/reverse_text/: sft.toml
configs/trainer/: gsm8k.toml  hendrycks_math.toml  intellect_math.toml  reverse_text.toml
configs/training/: 7b_experiment_math.toml  base.toml  codeforces.toml  debug.toml  formatask.toml  hendrycks_math.toml  intellect_math.toml  (+13 more)
environments/vf_ifeval/: pyproject.toml  vf_ifeval.py
environments/vf_rewardbench2/: pyproject.toml  vf_rewardbench2.py
environments/vf_swebench/: README.md  pyproject.toml  vf_swebench.py
scripts/: install.sh  install_envs.sh  test_env.py  tmux.sh
tests/: conftest.py  test_infer.py
(+267 files in other folders)
