[project]
name = "vf-ifeval"
version = "0.1.0"
tags = ["instruction-following", "single-turn", "formatting", "constraints"]
license = "Apache-2.0"
description = "Instruction-following evaluation (IFeval): verifies adherence to verifiable instructions like word counts, keywords, and structure."
dependencies = [
    "verifiers>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_ifeval.py"]